--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dev = [
     "pytest>=7.0",
     "black>=23.0",
     "ruff>=0.1.0",
+    "pre-commit>=3.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -42,7 +43,7 @@ packages = ["kubeman"]
 
 [tool.black]
 line-length = 100
-target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
+target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
@@ -57,4 +58,3 @@ extend-exclude = '''
   | dist
 )/
 '''
-
