--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "kubeman"
 version = "0.2.1"
-description = "A Python library for rendering Helm charts and ArgoCD applications"
+description = "A Python library for rendering Helm charts and Kubernetes resources with automatic ArgoCD Application generation. Features an abstract Template base class for consistent template management."
 readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
