--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "kubeman"
-version = "0.5.2"
+version = "0.5.3"
 description = "A Python library for rendering Helm charts and Kubernetes resources with optional ArgoCD Application generation. Features an abstract Template base class for consistent template management."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -78,4 +78,5 @@ kubeman = { workspace = true }
 [dependency-groups]
 dev = [
     "kubeman",
+    "pytest>=8.3.5",
 ]
